--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,15 @@ android {
         }
     }
 }
-
+repositories{
+    flatDir{
+        dirs'libs'
+    }
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile name:'SMSSDK-2.1.2',ext:'arr'
+    compile name:'SMSSDKGUI-2.1.2',ext:'arr'
 }
