登录界面的个人界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,5 +67,12 @@
             android:value="@integer/google_play_services_version" />
 
     </application>
+    <activity android:name=".GettimeAvtivity">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
 
 </manifest>
