修改了几个bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".GettimeActivity">
+        </activity>
         <activity android:name=".ZhuceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,12 +51,6 @@
             android:value="@integer/google_play_services_version" />
 
     </application>
-    <activity android:name=".GettimeAvtivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
 
 </manifest>
