添加返回按钮

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".TakephotoActivity">
+        </activity>
         <activity android:name=".EntryActivity">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
