--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,8 @@
         </activity>
         <activity android:name=".TakephotoActivity">
         </activity>
+        <activity android:name=".PersonnalMessage">
+        </activity>
         <activity android:name=".EntryActivity">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -100,7 +102,7 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-         <activity android:name=".TakephotoActivity"/>
+
     </application>
 
 
