--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile files('libs/MobCommons-2016.1012.1447.jar')
     compile files('libs/MobTools-2016.1012.1447.jar')
     compile files('libs/ShareSDK-Core-2.7.10.jar')
+    compile files('libs/android-async-http-1.4.8.jar')
 }
